platform/gitops/kustomize/security/opa-gatekeeper/constraints/require-resource-limits.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredResources
metadata:
  name: require-resource-requests-limits
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    excludedNamespaces:
      - kube-system
      - gatekeeper-system
      - falco
      - argocd
      - monitoring
  parameters:
    requests:
      - cpu
      - memory
    limits:
      - cpu
      - memory
